--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ p {
 	font-weight: 400;
 	font-size: 21px;
 	line-height: 1.7em;
+
 }
 p.copyright { font-size: 11px; opacity: 0.7;}
 p.centered { text-align: center; }
@@ -671,6 +672,7 @@ h5 {
     padding: 23px;
     margin-top: -4px;
     transition: all 0.3s ease-in-out;
+    height: 370px;
 }
 .infopanel:hover {
     background: none repeat scroll 0 0 rgba(38,43,48, 1);
@@ -1072,4 +1074,18 @@ Responsive Syling
     text-align: center;
     width: 100%;
     }
+}
+
+.mts {
+  margin-top: 5px !important;
+}
+
+.pair-badge {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.block-text {
+  text-align: justify !important;
 }
